<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/strBasedSkillsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/stat_strength"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/athleticsCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_athletics"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dexBasedSkillsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/stat_dexterity"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/acrobaticsCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_acrobatics"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/sleightOfHandCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_sleight_of_hand"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/stealthCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_stealth"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/intBasedSkillsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/stat_intelligence"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/arcanaCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_arcana"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/historyCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_history"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/investigationCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_investigation"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/natureCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_nature"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/religionCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_religion"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wisBasedSkillsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/stat_wisdom"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/animalHandlingCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_animal_handling"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/insightCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_insight"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/medicineCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_medicine"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/perceptionCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_perception"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/survivalCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_survival"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/chaBasedSkillsText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/stat_intelligence"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/deceptionCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_deception"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/intimidationCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_intimidation"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/performanceCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_performance"
                android:textSize="20sp" />
            <CheckBox
                android:id="@+id/persuasionCB"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/skill_persuasion"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>