<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:layout_marginStart="18dp"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="18dp"
    android:layout_marginRight="18dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/titledialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dialog_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/characterdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="1"
        android:text="@string/dialog_character" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/dialog_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/load_dial_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/delete_dial_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/cancel_dial_button"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>