<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/base_class_val"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/base_race"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/base_race"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_class" />

    <Spinner
        android:id="@+id/base_background_val"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_race_val"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/base_race_val"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_class_val"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/base_background"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/base_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_race" />

    <TextView
        android:id="@+id/base_img_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/base_img_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_background" />

    <TextView
        android:id="@+id/base_class"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/base_class"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/base_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/base_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_val"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:text="@string/name_val"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/iconBtn"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/base_img_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterIcon" />

    <ImageView
        android:id="@+id/characterIcon"
        android:layout_width="327dp"
        android:layout_height="176dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_img_text"
        app:srcCompat="@drawable/ic_menu_base" />
</androidx.constraintlayout.widget.ConstraintLayout>